--- a/libs/auth/src/lib/login/login.component.html
+++ b/libs/auth/src/lib/login/login.component.html
@@ -1,15 +1,15 @@
 <hidden-innovation-auth-layout>
   <div class='container-fluid p-0'>
-    <div class='row mb-2'>
+    <div class='row mb-3'>
       <div class='col-12'>
-        <h1 class='mat-h1 m-0 mb-1 font-sf-pro--bold'>Login</h1>
+        <h1 class='mat-h1 m-0 mb-1 font-sf-pro--bold'>Admin Login</h1>
         <p class='mat-subheading-2 font-calibri font-weight-normal text-muted mb-0'>Enter login credentials</p>
       </div>
     </div>
     <form [formGroup]='loginForm' class='row' (ngSubmit)='submit()'>
       <div class='col-12'>
         <div class='container-fluid p-0'>
-          <div class='row'>
+          <div class="row mb-1">
             <div class='col-12'>
               <mat-form-field class='w-100'>
                 <mat-label>Email</mat-label>
@@ -35,16 +35,12 @@
               </mat-form-field>
             </div>
           </div>
-          <div class='row mb-3'>
+          <div class='row'>
             <div class='col-12 d-flex justify-content-between'>
               <button mat-flat-button color='primary' type='submit' [disabled]='authFacade.isLoginLoading$ | async'>
                 Login
               </button>
               <a mat-button [routerLink]="['/forgot-password']">Forgot Password?</a>
-            </div>
-          </div>
-          <div class='row'>
-            <div class='col-12 d-flex flex-column align-items-end'>
             </div>
           </div>
         </div>
