--- a/libs/change-password/src/lib/change-password.component.html
+++ b/libs/change-password/src/lib/change-password.component.html
@@ -6,7 +6,7 @@
         <span class="mat-body-1">Please enter new password along with your old password in below fields to update your account login credentials.</span>
       </div>
     </div>
-    <div class="row mb-2 mt-2">
+    <div class="row mb-1">
       <div class="col-12">
         <mat-form-field class='w-100'>
           <mat-label>Old Password</mat-label>
@@ -21,7 +21,7 @@
         </mat-form-field>
       </div>
     </div>
-    <div class="row mb-2 mt-2">
+    <div class="row mb-1">
       <div class="col-12">
         <mat-form-field class='w-100'>
           <mat-label>New Password</mat-label>
@@ -36,7 +36,7 @@
         </mat-form-field>
       </div>
     </div>
-    <div class="row mb-2 mt-2">
+    <div class="row mb-2">
       <div class="col-12">
         <mat-form-field class='w-100'>
           <mat-label>Confirm Password</mat-label>
@@ -53,19 +53,17 @@
         </mat-form-field>
       </div>
     </div>
-    <div class="row mt-4">
-      <div class="col-auto">
+    <div class="row">
+      <div class="col-12 d-flex">
         <button
+          class="mr-3"
           [disabled]="store.isChangeLoading$ | async"
-          mat-flat-button color="primary" type="submit"
-          class="singIn-button">Submit
+          mat-flat-button color="primary" type="submit">Submit
         </button>
-      </div>
-      <div class="col-auto">
         <button
           [disabled]="store.isChangeLoading$ | async"
-          mat-stroked-button type="button" class="singIn-button"
-          [routerLink]="['dashboard']">Cancel
+          mat-stroked-button type="button"
+          [routerLink]="['/']">Cancel
         </button>
       </div>
     </div>
