--- a/libs/forgot-password/src/lib/forgot-password.component.html
+++ b/libs/forgot-password/src/lib/forgot-password.component.html
@@ -1,7 +1,7 @@
 <hidden-innovation-auth-layout>
   <div class='container-fluid p-0'>
 
-    <div class='row mb-2'>
+    <div class='row mb-3'>
       <div class='col-12'>
         <h1 class='mat-h1 m-0 mb-1 font-sf-pro--bold'>Forgot Password</h1>
         <p class='mat-subheading-2 font-calibri font-weight-normal text-muted mb-0'>Enter email to receive password
@@ -11,7 +11,7 @@
     <form class='row' (ngSubmit)="submit()">
       <div class='col-12'>
         <div class='container-fluid p-0'>
-          <div class='row mb-3'>
+          <div class="row mb-2">
             <div class='col-12 '>
               <mat-form-field class='w-100'>
                 <mat-label>Email</mat-label>
@@ -30,7 +30,7 @@
                         [disabled]="store.isForgotLoading$ | async">
                   Send Code
                 </button>
-                <a mat-flat-button type='button' [routerLink]="['/login']"
+                <a mat-button [routerLink]="['/login']"
                    [disabled]="store.isForgotLoading$ | async">
                   Back To Login
                 </a>
