--- a/libs/reset-password/src/lib/reset-password.component.html
+++ b/libs/reset-password/src/lib/reset-password.component.html
@@ -1,6 +1,6 @@
 <hidden-innovation-auth-layout>
   <div class='container-fluid p-0'>
-    <div class='row mb-2'>
+    <div class='row mb-3'>
       <div class='col-12'>
         <h1 class='mat-h1 m-0 mb-1 font-sf-pro--bold'>Reset Password</h1>
         <p class='mat-subheading-2 font-calibri font-weight-normal text-muted mb-0'>Enter the code you received on
@@ -10,7 +10,7 @@
     <form [formGroup]="resetPassForm" class='row' (ngSubmit)="submit()">
       <div class='col-12'>
         <div class='container-fluid p-0'>
-          <div class='row'>
+          <div class="row mb-1">
             <div class='col-12'>
               <mat-form-field class='w-100'>
                 <mat-label>Email</mat-label>
@@ -22,7 +22,7 @@
               </mat-form-field>
             </div>
           </div>
-          <div class='row'>
+          <div class="row mb-1">
             <div class='col-12'>
               <mat-form-field class='w-100'>
                 <mat-label>Code</mat-label>
@@ -36,7 +36,7 @@
               </mat-form-field>
             </div>
           </div>
-          <div class='row'>
+          <div class="row mb-1">
             <div class='col-12'>
               <mat-form-field class='w-100'>
                 <mat-label>Password</mat-label>
@@ -74,7 +74,7 @@
                       [disabled]="store.isResetLoading$ | async">Reset
                 Password
               </button>
-              <a mat-flat-button type='button' [routerLink]="['/login']" [disabled]="store.isResetLoading$ | async">
+              <a mat-button type='button' [routerLink]="['/login']" [disabled]="store.isResetLoading$ | async">
                 Back To Login
               </a>
             </div>
