--- a/apps/optimal-human/src/app/app.component.html
+++ b/apps/optimal-human/src/app/app.component.html
@@ -52,7 +52,7 @@
           <mat-icon>expand_more</mat-icon>
         </button>
         <mat-menu #userBarmenu="matMenu">
-          <button mat-menu-item [routerLink]="['/profile']">Profile</button>
+          <button mat-menu-item [routerLink]="['/edit-profile']">Edit Profile</button>
           <button mat-menu-item [routerLink]="['/change-password']">Change Password</button>
           <button mat-menu-item (click)="logoutPrompt()">Logout</button>
         </mat-menu>
