--- a/libs/auth/src/lib/login/login.component.html
+++ b/libs/auth/src/lib/login/login.component.html
@@ -12,8 +12,8 @@
           <div class="row mb-1">
             <div class='col-12'>
               <mat-form-field class='w-100'>
-                <mat-label>Name</mat-label>
-                <input matInput type="text" formControlName='adminName' required>
+                <mat-label>Email</mat-label>
+                <input matInput autocomplete='no' type="text" formControlName='email' required>
                 <mat-error
                   *ngIf='loginForm.controls.email.errors?.required'>{{formValidationService.emailValidationMessage.required}}</mat-error>
                 <mat-error
