--- a/libs/edit-admin-profile/src/lib/edit-admin-profile.component.html
+++ b/libs/edit-admin-profile/src/lib/edit-admin-profile.component.html
@@ -1,49 +1,49 @@
-<div class="p-4">
+<div class='p-4'>
 
-  <form   class="container align-self-start w-50  ml-0 pl-0" >
+  <form [formGroup]='editProfileForm' class='container align-self-start w-50  ml-0 pl-0'>
+    <div class='row mb-3'>
+      <div class='col-12 muli-typography'>
+        <span class='mat-body-1'>Update logged in admin profile details</span>
+      </div>
+    </div>
 
-    <form [formGroup]="editProfileForm" class='row'  >
+    <div class='row mb-1'>
       <div class='col-12'>
-        <div class='container-fluid p-0'>
-          <div class='row'>
-            <div class='col-12'>
-              <mat-form-field class='w-100'>
-                <mat-label>Name</mat-label>
-                <input matInput type="text" formControlName='name' required>
-                <mat-error
-                  *ngIf='editProfileForm.controls.name.errors?.required'>{{formValidationService.fieldValidationMessage.required}}</mat-error>
-                <mat-error
-                  *ngIf='editProfileForm.controls.name.errors?.alpha'>{{formValidationService.fieldValidationMessage.invalid}}</mat-error>
-                <mat-error
-                  *ngIf='editProfileForm.controls.name.errors?.maxLength'>{{formValidationService.fieldValidationMessage.maxLength}}</mat-error>
-              </mat-form-field>
-            </div>
-          </div>
-          <div class='row'>
-            <div class='col-12'>
-              <mat-form-field class='w-100'>
-                <mat-label>Email</mat-label>
-                <input matInput type="email" formControlName='email' required>
-                <mat-error
-                  *ngIf='editProfileForm.controls.email.errors?.required'>{{formValidationService.emailValidationMessage.required}}</mat-error>
-                <mat-error
-                  *ngIf='editProfileForm.controls.email.errors?.email'>{{formValidationService.emailValidationMessage.invalid}}</mat-error>
-              </mat-form-field>
-            </div>
-          </div>
-
-        </div>
+        <mat-form-field class='w-100'>
+          <mat-label>Name</mat-label>
+          <input matInput type='text' formControlName='name' required>
+          <mat-error
+            *ngIf='editProfileForm.controls.name.errors?.required'>Name {{formValidationService.fieldValidationMessage.required}}</mat-error>
+          <mat-error
+            *ngIf='editProfileForm.controls.name.errors?.alpha'>{{formValidationService.fieldValidationMessage.invalid}}</mat-error>
+          <mat-error
+            *ngIf='editProfileForm.controls.name.errors?.maxLength'>{{formValidationService.fieldValidationMessage.maxLength}}</mat-error>
+        </mat-form-field>
       </div>
-    </form>
+    </div>
 
-    <div class="row mt-4">
-      <div class="col-auto">
-        <button mat-flat-button color="primary" type="submit"
-                class="singIn-button">Submit</button>
+    <div class='row mb-2'>
+      <div class='col-12'>
+        <mat-form-field class='w-100'>
+          <mat-label>Email</mat-label>
+          <input autocomplete='no' matInput type='email' formControlName='email' required>
+          <mat-error
+            *ngIf='editProfileForm.controls.email.errors?.required'>{{formValidationService.emailValidationMessage.required}}</mat-error>
+          <mat-error
+            *ngIf='editProfileForm.controls.email.errors?.email'>{{formValidationService.emailValidationMessage.invalid}}</mat-error>
+        </mat-form-field>
       </div>
-      <div class="col-auto">
-        <button mat-stroked-button type="button" class="singIn-button"
-                [routerLink]="['dashboard']">Cancel</button>
+    </div>
+
+    <div class='row'>
+      <div class='col-12 d-flex'>
+        <button mat-flat-button
+                class='mr-3'
+                color='primary' type='submit'>Submit
+        </button>
+        <button mat-stroked-button type='button'
+                [routerLink]="['dashboard']">Cancel
+        </button>
       </div>
     </div>
   </form>
