--- a/libs/forgot-password/src/lib/forgot-password.component.html
+++ b/libs/forgot-password/src/lib/forgot-password.component.html
@@ -15,7 +15,7 @@
             <div class='col-12 '>
               <mat-form-field class='w-100'>
                 <mat-label>Email</mat-label>
-                <input matInput type="email" [formControl]="email" required>
+                <input matInput autocomplete='no' type="email" [formControl]="email" required>
                 <mat-error
                   *ngIf='email.errors?.required'>{{formValidationService.emailValidationMessage.required}}</mat-error>
                 <mat-error
