--- a/libs/reset-password/src/lib/reset-password.component.html
+++ b/libs/reset-password/src/lib/reset-password.component.html
@@ -14,7 +14,7 @@
             <div class='col-12'>
               <mat-form-field class='w-100'>
                 <mat-label>Email</mat-label>
-                <input matInput type="email" formControlName='email'>
+                <input matInput autocomplete='no' type="email" formControlName='email'>
                 <mat-error
                   *ngIf='resetPassForm.controls.email.errors?.required'>{{formValidationService.emailValidationMessage.required}}</mat-error>
                 <mat-error
