--- a/libs/dashboard/src/lib/dashboard.component.html
+++ b/libs/dashboard/src/lib/dashboard.component.html
@@ -45,13 +45,16 @@
         </div>
         <div class='col-12 col-md-6 col-xl-12 p-0 mb-4  '>
           <mat-card>
-            <canvas baseChart height='200'
-                    chartType="bar"
-                    [datasets]="chartData"
-                    [labels]="chartLabels"
-                    [legend]="chartLegend"
-                    [options]="chartOptions">
-            </canvas>
+            <mat-card-content >
+              <canvas baseChart height='200'
+                      chartType="bar"
+                      [datasets]="chartData"
+                      [labels]="chartLabels"
+                      [legend]="chartLegend"
+                      [options]="chartOptions">
+              </canvas>
+            </mat-card-content>
+
           </mat-card>
         </div>
       </div>
