--- a/libs/dashboard/src/lib/dashboard.component.html
+++ b/libs/dashboard/src/lib/dashboard.component.html
@@ -25,7 +25,7 @@
       <mat-card>
         <h1 class='card-header'>Statistics</h1>
         <mat-card-content >
-          <canvas baseChart height="500"
+          <canvas baseChart
                   chartType="line"
                   [colors]="chartColors"
                   [datasets]="chartData"
@@ -46,7 +46,7 @@
         <div class='col-12 col-md-6 col-xl-12 p-0 mb-4  '>
           <mat-card>
             <mat-card-content >
-              <canvas baseChart height='200'
+              <canvas baseChart
                       chartType="bar"
                       [datasets]="chartData"
                       [labels]="chartLabels"
