--- a/libs/user/user-listing/src/lib/user-listing.component.html
+++ b/libs/user/user-listing/src/lib/user-listing.component.html
@@ -56,6 +56,15 @@
             <tr mat-row *matRowDef='let row; columns: displayedColumns;'></tr>
           </table>
 
+          <div class="row  m-0">
+
+            <div class="mt-2 ">
+              <mat-paginator [pageSize]="pageSize" [length]="resultsLength" [pageIndex]="pageIndex"
+                             [pageSizeOptions]="pageSizeOptions"
+                             (page)="pageEvent = $event; onPaginateChange($event)"></mat-paginator>
+            </div>
+          </div>
+
         </mat-card-content>
       </mat-card>
 
