--- a/libs/questionnaire/create-questionnaire/src/lib/create-questionnaire.component.html
+++ b/libs/questionnaire/create-questionnaire/src/lib/create-questionnaire.component.html
@@ -18,38 +18,146 @@
     </div>
   </div>
   <div class='container-fluid p-0'>
-    <div class='row mb-4 justify-content-between'>
-      <div class='col-lg-4'>
-        <div class='row m-0'>
-          <mat-form-field class='w-100'>
-            <mat-label>Questionnaire Name</mat-label>
-            <input matInput autocomplete='no' type='text' formControlName='name' required>
-          </mat-form-field>
-        </div>
-      </div>
-      <div class='col-lg-7 d-flex align-items-center justify-content-end'>
-        <div class='row m-0'>
-          <h4 class='text-muted m-0 mr-5 mt-1'>TOTAL POINTS</h4>
+    <form action=''>
+      <div class='row mb-4 justify-content-between'>
+        <div class='col-lg-5'>
           <div class='row m-0'>
-            <div class='d-flex sentiment'>
-              <mat-icon color='primary' class='mr-3 icon--success'>sentiment_satisfied_alt</mat-icon>
-              <h2 class='m-0 icon--success'>0</h2>
-            </div>
-            <div class='d-flex sentiment'>
-              <mat-icon color='primary' class='mr-3 icon--error'>sentiment_very_dissatisfied</mat-icon>
-              <h2 class='m-0 icon--error'>0</h2>
+            <mat-form-field class='w-100'>
+              <mat-label>Questionnaire Name</mat-label>
+              <input matInput autocomplete='no' type='text' formControlName='name' required>
+            </mat-form-field>
+          </div>
+        </div>
+        <div class='col-lg-7 d-flex align-items-center justify-content-end'>
+          <div class='row m-0'>
+            <h4 class='text-muted m-0 mr-5 mt-1'>TOTAL POINTS</h4>
+            <div class='row m-0'>
+              <div class='d-flex sentiment'>
+                <mat-icon color='primary' class='mr-3 icon--success'>sentiment_satisfied_alt</mat-icon>
+                <h2 class='m-0 icon--success'>6</h2>
+              </div>
+              <div class='d-flex sentiment'>
+                <mat-icon color='primary' class='mr-3 icon--error'>sentiment_very_dissatisfied</mat-icon>
+                <h2 class='m-0 icon--error'>-3</h2>
+              </div>
             </div>
           </div>
         </div>
       </div>
-    </div>
+    </form>
   </div>
 
   <div class='container-fluid p-0'>
     <div class='row mb-4 justify-content-between'>
-      <div class='col-lg-4'>
+      <div class='col-lg-5'>
         <mat-card>
-
+          <div class='row  '>
+            <div class='col-12'>
+              <div class='d-flex justify-content-between'>
+                <h1>Questions</h1>
+                <mat-slide-toggle color='primary'><h4 class='m-0 text-muted ml-2'>Scoring</h4></mat-slide-toggle>
+              </div>
+            </div>
+          </div>
+          <mat-divider></mat-divider>
+          <div class='row  mt-4'>
+            <div class='col-12'>
+              <mat-card class='question-card'>
+                <div class='d-flex justify-content-between'>
+                  <div>
+                    <h3>Question 1</h3>
+                    <mat-card-subtitle>Multiple Choice</mat-card-subtitle>
+                    <p>How many Times</p>
+                  </div>
+                  <div>
+                    <button mat-icon-button [matMenuTriggerFor]='menu' aria-label='Example icon-button with a menu'>
+                      <mat-icon>more_vert</mat-icon>
+                    </button>
+                    <mat-menu #menu='matMenu'>
+                      <button mat-menu-item>
+                        <mat-icon>people_alt</mat-icon>
+                        <span>Option</span>
+                      </button>
+                    </mat-menu>
+                  </div>
+                </div>
+              </mat-card>
+            </div>
+          </div>
+          <div class='row m-0 mt-4'>
+            <button color='primary' class='text-left' mat-flat-button type='button'>
+              <mat-icon class='mr-2 mb-1'>add</mat-icon>
+              Add
+            </button>
+          </div>
+        </mat-card>
+      </div>
+      <div class='col-lg-7'>
+        <mat-card>
+          <div class='row  '>
+            <div class='col-12'>
+              <div class='d-flex justify-content-between'>
+                <h1>Questions 1</h1>
+                <div class='row m-0'>
+                  <div class='d-flex sentiment'>
+                    <mat-icon color='primary' class='mr-3 icon--success'>sentiment_satisfied_alt</mat-icon>
+                    <h2 class='m-0 icon--success'>-3</h2>
+                  </div>
+                  <div class='d-flex sentiment'>
+                    <mat-icon color='primary' class='mr-3 icon--error'>sentiment_very_dissatisfied</mat-icon>
+                    <h2 class='m-0 icon--error'>-2</h2>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+          <mat-divider></mat-divider>
+          <div class='row  mt-3'>
+            <div class='col-12'>
+              <mat-form-field class='w-100'>
+                <mat-label>Questionnaire Name</mat-label>
+                <input matInput autocomplete='no' type='text' required>
+              </mat-form-field>
+            </div>
+            <div class='col-12'>
+              <mat-form-field class='w-100' appearance='fill'>
+                <mat-label>Type</mat-label>
+                <mat-select>
+                  <mat-option value='one'>Multiple choice</mat-option>
+                  <mat-option value='two'>Slider</mat-option>
+                </mat-select>
+              </mat-form-field>
+            </div>
+            <div class='col-12'>
+              <mat-checkbox class='example-margin mt-2' color='primary'><h4 class='text-muted m-0  ml-2'>Why are we
+                asking ?</h4></mat-checkbox>
+            </div>
+            <div class='col-12'>
+              <div class='row mt-5 mb-4'>
+                <div class='col-3'><p class='text-muted'>POINTS</p></div>
+                <div class='col-9'><p class='text-muted'>ANSWERS</p></div>
+              </div>
+            </div>
+            <div class='col-12'>
+              <div class='row  mb-3'>
+                <div class='col-3'>
+                  <mat-form-field class='w-100'>
+                    <input matInput autocomplete='no' type='text' required>
+                  </mat-form-field>
+                </div>
+                <div class='col-9'>
+                  <mat-form-field class='w-100'>
+                    <input matInput autocomplete='no' type='text' required>
+                  </mat-form-field>
+                </div>
+              </div>
+            </div>
+          </div>
+          <div class='col-12'>
+            <div class='row'>
+             <button mat-button>ADD ANSWER</button>
+            </div>
+          </div>
         </mat-card>
       </div>
     </div>
