--- a/libs/questionnaire/create-questionnaire/src/lib/create-questionnaire.component.scss
+++ b/libs/questionnaire/create-questionnaire/src/lib/create-questionnaire.component.scss
@@ -14,3 +14,11 @@
     color: #E53935;
   }
 }
+.question-card
+{
+  transition: all ease 0.2s;
+  box-shadow: 0px 1px 5px rgba(0, 0, 0, 0.2), 0px 3px 4px rgba(0, 0, 0, 0.12), 0px 2px 4px rgba(0, 0, 0, 0.14);
+  &:hover{
+    background-color: #F2F9FE;
+  }
+}
