--- a/libs/questionnaire/create-questionnaire/src/lib/create-questionnaire.component.html
+++ b/libs/questionnaire/create-questionnaire/src/lib/create-questionnaire.component.html
@@ -29,7 +29,7 @@
           </div>
         </div>
         <div class='col-lg-7 d-flex align-items-center justify-content-end'>
-          <div class='row m-0'>
+          <div class='row m-0' *ngIf='showSentiment'>
             <h4 class='text-muted m-0 mr-5 mt-1'>TOTAL POINTS</h4>
             <div class='row m-0'>
               <div class='d-flex sentiment'>
@@ -55,7 +55,7 @@
             <div class='col-12'>
               <div class='d-flex justify-content-between'>
                 <h1>Questions</h1>
-                <mat-slide-toggle color='primary'><h4 class='m-0 text-muted ml-2'>Scoring</h4></mat-slide-toggle>
+                <mat-slide-toggle color='primary' [(ngModel)]='showSentiment'  labelPosition='before'><h4 class='m-0 text-muted mr-2'>Scoring</h4></mat-slide-toggle>
               </div>
             </div>
           </div>
@@ -115,7 +115,7 @@
             <div class='col-12'>
               <div class='d-flex justify-content-between'>
                 <h1>Questions 1</h1>
-                <div class='row m-0'>
+                <div class='row m-0' *ngIf='showSentiment'>
                   <div class='d-flex sentiment'>
                     <mat-icon color='primary' class='mr-3 icon--success'>sentiment_satisfied_alt</mat-icon>
                     <h2 class='m-0 icon--success'>-3</h2>
@@ -165,19 +165,19 @@
               </div>
             </div>
             <div class='col-12'>
-              <mat-checkbox class='example-margin mt-2'  color='primary'><h4 class='text-muted m-0  ml-2'>Why are we
+              <mat-checkbox class='example-margin mt-2' [(ngModel)]="showField"  color='primary'><h4 class='text-muted m-0  ml-2'>Why are we
                 asking ?</h4></mat-checkbox>
             </div>
             <div class='col-12'>
               <div class='row m-0  mt-4 mb-2'>
-                <mat-form-field class='w-100' >
+                <mat-form-field class='w-100' *ngIf='showField'>
                   <mat-label>Why are we asking</mat-label>
                   <textarea matInput placeholder="Lorem Ipsum is simply dummy text of the printing and typesetting industry. "></textarea>
                 </mat-form-field>
               </div>
             </div>
             <div class='col-12'>
-              <mat-checkbox class='example-margin mt-2'  color='primary'><h4 class='text-muted m-0  ml-2'>Icons</h4></mat-checkbox>
+              <mat-checkbox class='example-margin mt-2' [(ngModel)]="showIcon"   color='primary'><h4 class='text-muted m-0  ml-2'>Icons</h4></mat-checkbox>
             </div>
             <div class='col-12'>
               <div class='row mt-4 mb-2'>
@@ -193,8 +193,20 @@
                   </mat-form-field>
                 </div>
                 <div class='col-9'>
+
                   <mat-form-field class='w-100'>
-                    <input matInput autocomplete='no' type='text' required>
+                    <mat-label>Answer 1</mat-label>
+                    <input matInput autocomplete='no' type='text' >
+                  </mat-form-field>
+                </div>
+              </div>
+              <div class='row  mb-2'>
+                <div class='offset-3'>
+                </div>
+                <div class='col-9' *ngIf='showIcon'>
+                  <mat-form-field class='w-100'>
+                    <mat-label>Font Awesome Icon 6 Code</mat-label>
+                    <input matInput autocomplete='no' type='text' >
                   </mat-form-field>
                 </div>
               </div>
